ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 80 0.0.0.0/0 any 172.65.32.248 in
-A ufw-user-input -p tcp --dport 80 -s 172.65.32.248 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -s 172.65.32.248 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 172.65.32.248 in
-A ufw-user-input -p tcp --dport 443 -s 172.65.32.248 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -s 172.65.32.248 -j ACCEPT

### tuple ### allow tcp 80,443 0.0.0.0/0 any 0.0.0.0/0 Apache%20Full - in
-A ufw-user-input -p tcp -m multiport --dports 80,443 -j ACCEPT -m comment --comment 'dapp_Apache%20Full'

### tuple ### allow tcp 25 0.0.0.0/0 any 0.0.0.0/0 Postfix - in
-A ufw-user-input -p tcp --dport 25 -j ACCEPT -m comment --comment 'dapp_Postfix'

### tuple ### allow tcp 143 0.0.0.0/0 any 0.0.0.0/0 Dovecot%20IMAP - in
-A ufw-user-input -p tcp --dport 143 -j ACCEPT -m comment --comment 'dapp_Dovecot%20IMAP'

### tuple ### allow tcp 993 0.0.0.0/0 any 0.0.0.0/0 Dovecot%20Secure%20IMAP - in
-A ufw-user-input -p tcp --dport 993 -j ACCEPT -m comment --comment 'dapp_Dovecot%20Secure%20IMAP'

### tuple ### allow tcp 25 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 25 -j ACCEPT

### tuple ### allow tcp 143,993 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 143,993 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp --dport 22 -j ACCEPT

### tuple ### allow any 2222 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2222 -j ACCEPT
-A ufw-user-input -p udp --dport 2222 -j ACCEPT

### tuple ### allow any 25 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 25 -j ACCEPT
-A ufw-user-input -p udp --dport 25 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT
-A ufw-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 993 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 993 -j ACCEPT
-A ufw-user-input -p udp --dport 993 -j ACCEPT

### tuple ### allow any 22345 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22345 -j ACCEPT
-A ufw-user-input -p udp --dport 22345 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 465 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 465 -j ACCEPT

### tuple ### allow tcp 143 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 143 -j ACCEPT

### tuple ### allow tcp 993 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 993 -j ACCEPT

### tuple ### allow any 25 0.0.0.0/0 any 0.0.0.0/0 in_eth0
-A ufw-user-input -i eth0 -p tcp --dport 25 -j ACCEPT
-A ufw-user-input -i eth0 -p udp --dport 25 -j ACCEPT

### tuple ### allow any 22 0.0.0.0/0 any 0.0.0.0/0 in_eth0
-A ufw-user-input -i eth0 -p tcp --dport 22 -j ACCEPT
-A ufw-user-input -i eth0 -p udp --dport 22 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 in_eth0
-A ufw-user-input -i eth0 -p tcp --dport 53 -j ACCEPT
-A ufw-user-input -i eth0 -p udp --dport 53 -j ACCEPT

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in_eth0
-A ufw-user-input -i eth0 -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -i eth0 -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in_eth0
-A ufw-user-input -i eth0 -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -i eth0 -p udp --dport 443 -j ACCEPT

### tuple ### allow any 22345 0.0.0.0/0 any 0.0.0.0/0 in_eth0
-A ufw-user-input -i eth0 -p tcp --dport 22345 -j ACCEPT
-A ufw-user-input -i eth0 -p udp --dport 22345 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
